Fix spacing in WhatIDo component title

--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -25,6 +25,9 @@
   margin-right: 10%;
   margin-bottom: 100px;
 }
+.what-box h2 div {
+  margin-top: 8px;
+}
 
 .hat-h2 {
   font-style: italic;
